# hybrid-crawler

./: README.md
crawler_control_open_loop/src/crawler_bringup/launch/: system_bringup.launch.py
crawler_control_open_loop/src/crawler_tasks/config/: gaits_phased.yaml
crawler_models_and_controllers/contact_models/: package.xml  setup.py
crawler_models_and_controllers/contact_models/contact_models/: cable_contact_model_node.py  soft_contact_model_node.py
crawler_models_and_controllers/crawler_controllers/: setup.py
crawler_models_and_controllers/crawler_controllers/config/: all_controllers.yaml  pump_bangbang.yaml  pump_pid.yaml  soft_force_pid.yaml  soft_pressure_combiner.yaml
crawler_models_and_controllers/crawler_controllers/crawler_controllers/: package.xml  setup.py
crawler_models_and_controllers/crawler_controllers/crawler_controllers/crawler_controllers/: pid.py
crawler_models_and_controllers/crawler_controllers/crawler_controllers/crawler_controllers/config/: all_controllers.yaml  cable_force_pid.yaml  pump_bangbang.yaml  pump_pid.yaml  soft_force_pid.yaml
crawler_models_and_controllers/crawler_controllers/crawler_controllers/crawler_controllers/launch/: controllers_with_config.launch.py
crawler_models_and_controllers/crawler_controllers/crawler_controllers/crawler_controllers/nodes/: cable_force_pid_node.py  pump_bangbang_controller.py  pump_pid_controller.py  soft_force_pid_node.py
crawler_models_and_controllers/crawler_controllers/launch/: controllers_with_config.launch.py
crawler_models_and_controllers/crawler_models/: package.xml  setup.py
crawler_models_and_controllers/crawler_models/deformation_model/: cable_ik_node.py  soft_forward_statics_node.py
crawler_models_and_controllers/crawler_models/launch/: deformation_model.launch.py
crawler_sensors/sensor_fuser/: package.xml
crawler_sensors/sensor_fuser/config/: sensor_fuser.yaml
crawler_sensors/sensor_fuser/sensor_fuser/: sensor_fuser_node.py
crawler_sensors/teensy_serial_bridge/: package.xml
