<?xml version="1.0"?>
<package format="3">
  <name>sensor_fuser</name>
  <version>0.1.0</version>
  <description>Fuses raw sensor arrays into scalar feedback topics for controllers.</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
