<?xml version="1.0"?>
<package format="3">
  <name>crawler_controllers</name>
  <version>0.2.0</version>
  <description>Controllers (PID and bang-bang) with config folder; renamed pump PID files.</description>
  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export/>
</package>
